lib/libc/aarch64/string: add strncat SIMD implementation
This patch requires D46170 as it depends on strlcpy being labeled
__memccpy.

It's a direct copy from the amd64 string functions.

Tested by:	fuz (exprun)
Reviewed by:	fuz, emaste
Sponsored by:	Google LLC (GSoC 2024)
PR:		281175
Differential Revision: https://reviews.freebsd.org/D46292

--- a/lib/libc/aarch64/string/Makefile.inc
+++ b/lib/libc/aarch64/string/Makefile.inc
@@ -28,7 +28,8 @@ MDSRCS+= \
 	strcat.c \
 	strlcpy.S \
 	strncmp.S \
-	memccpy.S
+	memccpy.S \
+	strncat.c
 
 #
 # Add the above functions. Generate an asm file that includes the needed
