lib/libc/aarch64/string: add strlcat SIMD implementation
This patch requires D46243 as it depends on strlcpy being labeled
__strlcpy.

It's a direct copy from the amd64 string functions using memchr and
strlcpy to implement strlcat.

Tested by:	fuz (exprun)
Reviewed by:	fuz, emaste
Sponsored by:	Google LLC (GSoC 2024)
PR:		281175
Differential Revision: https://reviews.freebsd.org/D46272

--- a/lib/libc/aarch64/string/Makefile.inc
+++ b/lib/libc/aarch64/string/Makefile.inc
@@ -29,7 +29,8 @@ MDSRCS+= \
 	strlcpy.S \
 	strncmp.S \
 	memccpy.S \
-	strncat.c
+	strncat.c \
+	strlcat.c
 
 #
 # Add the above functions. Generate an asm file that includes the needed
