lib/libc/aarch64/string: add bcopy & bzero wrapper
This patch enabled usage of SIMD enhanced functions to implement
bcopy and bzero.

Tested by:	fuz (exprun)
Reviewed by:	fuz, emaste
Sponsored by:	Google LLC (GSoC 2024)
PR:		281175
Differential Revision: https://reviews.freebsd.org/D46459

--- a/lib/libc/aarch64/string/Makefile.inc
+++ b/lib/libc/aarch64/string/Makefile.inc
@@ -30,7 +30,9 @@ MDSRCS+= \
 	memccpy.S \
 	strncat.c \
 	strlcat.c \
-	strlen.S
+	strlen.S \
+	bcopy.c \
+	bzero.c
 
 #
 # Add the above functions. Generate an asm file that includes the needed
