--- a/etc/mtree/BSD.tests.dist
+++ b/etc/mtree/BSD.tests.dist
@@ -749,6 +749,10 @@
                 ..
             ..
         ..
+        cam
+            ctl
+            ..
+        ..
         devrandom
         ..
         dtrace
