build: Check NO_ROOT and METALOG for more targets
In f6575ed0deb08 I added a check that DISTDIR is set and is not / for
`make distributeworld`.  Extend the check to `distributekernel` and the
two package* targets as the same argument applies.

Reviewed by:	brooks
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D48339

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1000,13 +1000,18 @@ INSTALLFLAGS+=	-h sha256
 IMAKE_INSTALL=	INSTALL="${INSTALL_CMD} ${INSTALLFLAGS}"
 IMAKE_MTREE=	MTREE_CMD="${MTREE_CMD} ${MTREEFLAGS}"
 .endif
-.if make(distributeworld)
+
+.if make(distributeworld) || make(packageworld) || make(distributekernel) || \
+    make(packagekernel)
 .if ${DISTDIR:U/} == /
-.error DISTDIR must be set for make distributeworld and may not be the root directory.
+.error DISTDIR must be set for make distribute* and make package*, and may not be the root directory.
 .endif
 .if !defined(NO_ROOT) || !defined(METALOG)
-.error NO_ROOT and METALOG must be set for make distributeworld.
+.error NO_ROOT and METALOG must be set for make distribute* and make package*.
 .endif
+.endif
+
+.if make(distributeworld)
 CERTCTLDESTDIR=	${DESTDIR}/${DISTDIR}
 CERTCTLFLAGS+=	-d /base
 .else
