lib: hook libder up to the build
libder will be used in upcoming ECC support in the pkg(7) bootstrap to
read DER-encoded keys and signatures.

(cherry picked from commit f59bb61e1eb4d1e4fc3c60cc14779d0668267cb2)

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -16,6 +16,7 @@ SUBDIR_BOOTSTRAP= \
 	${_libclang_rt} \
 	${_libcplusplus} \
 	${_libcxxrt} \
+	libder \
 	libelf \
 	libssp \
 	libssp_nonshared \
