Makefile.inc1: Set DISTDIR in stagekernel target
The distributekernel target expects DESTDIR and DISTDIR to be set.  The
stagekernel target invokes `make distributekernel`, and previously left
DISTDIR unset, resulting in a path with a "//" component.  Instead, set
DISTDIR to . to make the way we're (ab)using the distributekernel target
more explicit.

Reviewed by:	bapt
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D48288

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1991,7 +1991,7 @@ packagekernel: .PHONY
 .endif
 
 stagekernel: .PHONY
-	${_+_}${MAKE} -C ${.CURDIR} ${.MAKEFLAGS} distributekernel
+	${_+_}${MAKE} -C ${.CURDIR} ${.MAKEFLAGS} DISTDIR=. distributekernel
 
 PORTSDIR?=	/usr/ports
 WSTAGEDIR?=	${OBJTOP}/worldstage
