--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1843,13 +1843,13 @@ buildkernel: .MAKE .PHONY
 	@echo "--------------------------------------------------------------"
 
 .if !make(packages) && !make(update-packages)
-NO_INSTALLEXTRAKERNELS?=	yes
+INSTALLEXTRAKERNELS?=	no
 .else
 # packages/update-packages installs kernels to a staging directory then builds
 # packages from the result to be installed, typically to other systems.  It is
 # less surprising for these targets to honor KERNCONF if multiple kernels are
 # specified.
-NO_INSTALLEXTRAKERNELS?=	no
+INSTALLEXTRAKERNELS?=	yes
 .endif
 
 #
@@ -1878,7 +1878,7 @@ reinstallkernel reinstallkernel.debug: _installcheck_kernel .PHONY
 	  echo ">>> Install kernel(s) ${INSTALLKERNEL} completed in $$seconds seconds, ncpu: $$(${_ncpu_cmd})${.MAKE.JOBS:S/^/, make -j/}"
 	@echo "--------------------------------------------------------------"
 .endif
-.if ${BUILDKERNELS:[#]} > 1 && ${NO_INSTALLEXTRAKERNELS} != "yes"
+.if ${BUILDKERNELS:[#]} > 1 && ${INSTALLEXTRAKERNELS} != "no"
 .for _kernel in ${BUILDKERNELS:[2..-1]}
 	@echo "--------------------------------------------------------------"
 	@echo ">>> Installing kernel ${_kernel} $$(LC_ALL=C date)"
@@ -1917,7 +1917,7 @@ distributekernel distributekernel.debug: .PHONY
 	    ${DESTDIR}/${DISTDIR}/kernel.meta
 .endif
 .endif
-.if ${BUILDKERNELS:[#]} > 1 && ${NO_INSTALLEXTRAKERNELS} != "yes"
+.if ${BUILDKERNELS:[#]} > 1 && ${INSTALLEXTRAKERNELS} != "no"
 .for _kernel in ${BUILDKERNELS:[2..-1]}
 .if defined(NO_ROOT)
 	@echo "#${MTREE_MAGIC}" > ${DESTDIR}/${DISTDIR}/kernel.${_kernel}.premeta
@@ -1951,7 +1951,7 @@ packagekernel: .PHONY
 	    @${DESTDIR}/${DISTDIR}/kernel.meta | \
 	    ${XZ_CMD} > ${DESTDIR}/${DISTDIR}/kernel-dbg.txz
 .endif
-.if ${BUILDKERNELS:[#]} > 1 && ${NO_INSTALLEXTRAKERNELS} != "yes"
+.if ${BUILDKERNELS:[#]} > 1 && ${INSTALLEXTRAKERNELS} != "no"
 .for _kernel in ${BUILDKERNELS:[2..-1]}
 	cd ${DESTDIR}/${DISTDIR}/kernel.${_kernel}; \
 	    ${TAR_CMD} cvf - --exclude '*.debug' \
@@ -1976,7 +1976,7 @@ packagekernel: .PHONY
 	    ${TAR_CMD} cvf - --include '*/*/*.debug' $$(eval find .) | \
 	    ${XZ_CMD} > ${DESTDIR}/${DISTDIR}/kernel-dbg.txz
 .endif
-.if ${BUILDKERNELS:[#]} > 1 && ${NO_INSTALLEXTRAKERNELS} != "yes"
+.if ${BUILDKERNELS:[#]} > 1 && ${INSTALLEXTRAKERNELS} != "no"
 .for _kernel in ${BUILDKERNELS:[2..-1]}
 	cd ${DESTDIR}/${DISTDIR}/kernel.${_kernel}; \
 	    ${TAR_CMD} cvf - --exclude '*.debug' . | \
@@ -2059,7 +2059,7 @@ BRANCH_EXT_FROM=
 .endif
 
 PKGMAKEARGS+=	PKG_VERSION=${PKG_VERSION} \
-		NO_INSTALLEXTRAKERNELS=${NO_INSTALLEXTRAKERNELS}
+		INSTALLEXTRAKERNELS=${INSTALLEXTRAKERNELS}
 
 packages: .PHONY
 	${_+_}${MAKE} -C ${.CURDIR} ${PKGMAKEARGS} real-packages
@@ -2307,7 +2307,7 @@ create-kernel-packages-flavor${flavor:C,^""$,${_default_flavor},}: _pkgbootstrap
 		-o ${REPODIR}/${PKG_ABI}/${PKG_OUTPUT_DIR}
 . endfor
 .endif
-.if ${BUILDKERNELS:[#]} > 1 && ${NO_INSTALLEXTRAKERNELS} != "yes"
+.if ${BUILDKERNELS:[#]} > 1 && ${INSTALLEXTRAKERNELS} != "no"
 . for _kernel in ${BUILDKERNELS:[2..-1]}
 .  if exists(${KSTAGEDIR}/kernel.${_kernel}.meta)
 .   if ${MK_DEBUG_FILES} != "no"
