BUS_HINTED_CHILD.9: New manpage to document this bus method
Reviewed by:	ziaee, imp
Differential Revision:	https://reviews.freebsd.org/D48366

(cherry picked from commit 4276dfa8c4b9e75ab29f2c53a7af36c2f77ab563)

--- a/share/man/man9/Makefile
+++ b/share/man/man9/Makefile
@@ -47,6 +47,7 @@ MAN=	accept_filter.9 \
 	BUS_GET_CPUS.9 \
 	BUS_GET_PROPERTY.9 \
 	bus_get_resource.9 \
+	BUS_HINTED_CHILD.9 \
 	bus_map_resource.9 \
 	BUS_NEW_PASS.9 \
 	BUS_PRINT_CHILD.9 \
