bus_generic_print_child.9: Add bus_print_child_{header,footer}
These functions are already described in the body, just add them in
the NAME and SYNOPSIS sections along with MLINKS.

Reviewed by:	ziaee
Differential Revision:	https://reviews.freebsd.org/D48370

--- a/share/man/man9/Makefile
+++ b/share/man/man9/Makefile
@@ -692,6 +692,8 @@ MLINKS+=bus_dma.9 busdma.9 \
 	bus_dma.9 bus_dmamem_free.9 \
 	bus_dma.9 bus_dma_tag_create.9 \
 	bus_dma.9 bus_dma_tag_destroy.9
+MLINKS+=bus_generic_print_child.9 bus_print_child_footer.9 \
+	bus_generic_print_child.9 bus_print_child_header.9
 MLINKS+=bus_generic_read_ivar.9 bus_generic_write_ivar.9
 MLINKS+=BUS_GET_CPUS.9 bus_get_cpus.9
 MLINKS+=bus_map_resource.9 bus_unmap_resource.9 \
