depend-cleanup: bea89d038ac5 also moved memchr
Commit bea89d038ac5 added strlcat but also introduced a memchr wrapper
in the source tree rather than using the autogenerated one used for
AARCH64_STRING_FUNCS.  Move memchr.S to MDSRS and add a cleanup rule for
the old wrapper.

Reviewed by:	fuz
Sponsored by:	The FreeBSD Foundation
Fixes: bea89d038ac5 ("lib/libc/aarch64/string: add strlcat SIMD implementation")
Differential Revision: https://reviews.freebsd.org/D48502

--- a/lib/libc/aarch64/string/Makefile.inc
+++ b/lib/libc/aarch64/string/Makefile.inc
@@ -4,7 +4,6 @@
 #
 
 AARCH64_STRING_FUNCS= \
-	memchr \
 	memcmp \
 	memcpy \
 	memmove \
@@ -19,6 +18,7 @@ AARCH64_STRING_FUNCS= \
 
 # SIMD-enhanced routines not derived from Arm's code
 MDSRCS+= \
+	memchr.S \
 	strcmp.S \
 	strspn.S \
 	strcspn.S \
