libc: Add include path for aarch64 memchr.S
Reported by:	bapt
Sponsored by:	The FreeBSD Foundation
Fixes: d355c28a0954 ("depend-cleanup: bea89d038ac5 also moved memchr")

--- a/lib/libc/aarch64/string/Makefile.inc
+++ b/lib/libc/aarch64/string/Makefile.inc
@@ -54,3 +54,7 @@ CLEANFILES+=	${FUNC}.S
 MDSRCS+=	${FUNC}.S
 CFLAGS.${FUNC}.S+=-I${SRCTOP}/contrib/arm-optimized-routines/string
 .endfor
+
+# memchr.S is a wrapper in the src tree for the implementation from
+# arm-optimized-routines
+CFLAGS.memchr.S+=-I${SRCTOP}/contrib/arm-optimized-routines/string
