pkgbase: Fix OSVERSION specification when creating a repo
-o OSVERSION= needs to appear before the "repo" verb, otherwise it has
no effect.  In this case, recent pkg-devel fails to create the repo,
saying that ABI cannot be specified without OSVERSION.

Reviewed by:	kevans, manu
MFC after:	2 weeks
Fixes:		188fe88ec50e ("pkgbase: force OSVERSION")
Differential Revision:	https://reviews.freebsd.org/D48518

(cherry picked from commit f9097705fb1c8d9c1f8946d1c1897d606bdbd517)

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -2150,8 +2150,7 @@ sign-packages:	_pkgbootstrap .PHONY
 .endif
 	@[ -L "${REPODIR}/$$(${PKG_CMD} -o ABI_FILE=${WSTAGEDIR}/usr/bin/uname config ABI)/latest" ] && \
 		unlink ${REPODIR}/$$(${PKG_CMD} -o ABI_FILE=${WSTAGEDIR}/usr/bin/uname config ABI)/latest ; \
-	${PKG_CMD} -o ABI_FILE=${WSTAGEDIR}/usr/bin/uname repo \
-		-o OSVERSION="${SRCRELDATE}" \
+	${PKG_CMD} -o ABI_FILE=${WSTAGEDIR}/usr/bin/uname -o OSVERSION="${SRCRELDATE}" repo \
 		-m ${WSTAGEDIR}/meta \
 		-o ${REPODIR}/$$(${PKG_CMD} -o ABI_FILE=${WSTAGEDIR}/usr/bin/uname config ABI)/${PKG_VERSION} \
 		${REPODIR}/$$(${PKG_CMD} -o ABI_FILE=${WSTAGEDIR}/usr/bin/uname config ABI)/${PKG_VERSION} \
