vmm: Depend on vmm_hyp* files as needed
The arm64 vmm_nvhe* files depend on a vmm_hyp file to provide most of
the implementation. As these are built with custom rules the normal
generated dependency information is not used, even if generated.

Add a dependency between these two sets of files to ensure when the
implementation is updated the file will be rebuilt.

Sponsored by:	Arm Ltd

--- a/sys/modules/vmm/Makefile
+++ b/sys/modules/vmm/Makefile
@@ -45,11 +45,11 @@ CLEANFILES+=	vmm_nvhe_exception.o vmm_nvhe.o
 CLEANFILES+=	vmm_hyp_blob.elf.full
 CLEANFILES+=	vmm_hyp_blob.elf vmm_hyp_blob.bin
 
-vmm_nvhe_exception.o: vmm_nvhe_exception.S
+vmm_nvhe_exception.o: vmm_nvhe_exception.S vmm_hyp_exception.S
 	${CC} -c -x assembler-with-cpp -DLOCORE \
 	    ${NOSAN_CFLAGS:N-mbranch-protection*} ${.IMPSRC} -o ${.TARGET} -fpie
 
-vmm_nvhe.o: vmm_nvhe.c
+vmm_nvhe.o: vmm_nvhe.c vmm_hyp.c
 	${CC} -c ${NOSAN_CFLAGS:N-mbranch-protection*} ${.IMPSRC} \
 	    -o ${.TARGET} -fpie
 
