--- a/etc/Makefile
+++ b/etc/Makefile
@@ -108,7 +108,7 @@ MTREES+=	mtree/BSD.libsoft.dist		/usr/lib/debug/usr
 .endif
 .if ${MK_TESTS} != "no"
 MTREES+=	mtree/BSD.tests.dist		${TESTSBASE}
-MTREES+=	mtree/BSD.tests.dist		/usr/lib/debug/${TESTSBASE}
+MTREES+=	mtree/BSD.tests.dist		/usr/lib/debug${TESTSBASE}
 .endif
 .if ${MK_SENDMAIL} != "no"
 MTREES+=	mtree/BSD.sendmail.dist		/
