--- a/sys/modules/rtw89/Makefile
+++ b/sys/modules/rtw89/Makefile
@@ -4,6 +4,7 @@ DEVRTW89DIR=	${SRCTOP}/sys/contrib/dev/rtw89
 .PATH: ${DEVRTW89DIR}
 
 WITH_CONFIG_PM=	0
+WITH_DEBUGFS=	1
 
 KMOD=	if_rtw89
 
@@ -43,7 +44,9 @@ CFLAGS+=	-DLINUXKPI_VERSION=60800
 CFLAGS+=	-I${DEVRTW89DIR}
 CFLAGS+=	${LINUXKPI_INCLUDES}
 CFLAGS+=	-DCONFIG_RTW89_DEBUGMSG
-#CFLAGS+=	-DCONFIG_RTW89_DEBUGFS
+.if defined(WITH_DEBUGFS) && ${WITH_DEBUGFS} > 0
+CFLAGS+=	-DCONFIG_RTW89_DEBUGFS
+.endif
 
 #CFLAGS+=	-ferror-limit=0
 
