--- a/libexec/rc/rc.conf
+++ b/libexec/rc/rc.conf
@@ -465,6 +465,7 @@ routed_flags="-q"		# Flags for routing daemon.
 arpproxy_all="NO"		# replaces obsolete kernel option ARP_PROXYALL.
 forward_sourceroute="NO"	# do source routing (only if gateway_enable is set to "YES")
 accept_sourceroute="NO"		# accept source routed packets to us
+routing_flags=""		# Flags for adjusting calls to route(8) from routing
 
 ### Bluetooth ###
 hcsecd_enable="NO"		# Enable hcsecd(8) (or NO)
