Provides means to squelch "Autoloading" on bootup
The rc scripts afford various levels of support for quiet mode.  For
example, route(8) has `-q` and `wpa_supplicant(8)` has `-s`.

The rc file for `/etc/rc.d/devmatch` uses the standard shell `echo`
command.

For those who like a quieter bootup (less-technical users, those whose
infrastructure environments are reliable/stable), this can be confusing
or frustrating.

With this change, users may squelch the echo behavior.

devmatch_autoloading_msgs="NO"	# Do not log "Autoloading" to console from devmatch rc.

Signed-off-by: Steven G. Harms <steven.harms@gmail.com>

--- a/libexec/rc/rc.conf
+++ b/libexec/rc/rc.conf
@@ -45,6 +45,8 @@ devd_enable="YES" 	# Run devd, to trigger programs on device tree changes.
 devd_flags=""		# Additional flags for devd(8).
 devmatch_enable="YES"	# Demand load kernel modules based on device ids.
 devmatch_blocklist=""	# List of modules (w/o .ko) to exclude from devmatch.
+devmatch_autoloading_msgs="NO"	# Do not log "Autoloading" to console from devmatch rc.
+
 #kld_list="" 		# Kernel modules to load after local disks are mounted
 kldxref_enable="YES"	# Build linker.hints files with kldxref(8).
 kldxref_clobber="NO"	# Overwrite old linker.hints at boot.
