sysctl: Teach sysctl to attach and run itself in a jail
This allows the parent jail to retrieve or set kernel state when child
does not have sysctl(8) installed (e.g. light weighted OCI containers
or slim jails).

This is especially useful when manipulating jail prison or vnet sysctls.
For example, `sysctl -j foo -Ja` or `sysctl -j foo net.fibs=2`.

Reviewed by:	dfr (previous version), markj
MFC after:	1 week
Relnotes:	yes
Differential Revision:	https://reviews.freebsd.org/D48618

(cherry picked from commit 08aa7128dea4d14811ae4a0225d7c678869cfe62)
(cherry picked from commit 8d5d7e2ba3a685a9ebe7aa578c6b76adf8fe4c2e)

--- a/sbin/sysctl/Makefile
+++ b/sbin/sysctl/Makefile
@@ -1,9 +1,15 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
+.include <src.opts.mk>
 
 PACKAGE=runtime
 CONFS=	sysctl.conf
 PROG=	sysctl
 WARNS?=	3
 MAN=	sysctl.8
+
+.if ${MK_JAIL} != "no" && !defined(RESCUE)
+CFLAGS+=	-DJAIL
+LIBADD+=	jail
+.endif
 
 .include <bsd.prog.mk>
