keymaps: Add Canadian Mulitlingual Standard
Pull Request: https://github.com/freebsd/freebsd-src/pull/1586

(cherry picked from commit 602be8e1a8711dd9c264e75078a35533f07526eb)

--- a/share/vt/keymaps/Makefile
+++ b/share/vt/keymaps/Makefile
@@ -12,6 +12,7 @@ FILES=	INDEX.keymaps \
 	by.kbd \
 	ca.kbd \
 	ca-fr.kbd \
+	ca-multi.kbd \
 	centraleuropean.kbd \
 	centraleuropean.qwerty.kbd \
 	ch-fr.acc.kbd \
