ng_sppp: Build only on i386 and amd64
This module depends on sppp(4) which is only enabled on i386 and amd64.

This is a direct commit to stable/13 as ng_sppp(4) no longer exists in
-current and stable/14.

--- a/sys/modules/netgraph/Makefile
+++ b/sys/modules/netgraph/Makefile
@@ -46,7 +46,7 @@ SUBDIR=	async \
 	socket \
 	source \
 	split \
-	sppp \
+	${_sppp} \
 	tag \
 	tcpmss \
 	tee \
@@ -62,6 +62,10 @@ _bluetooth=	bluetooth
 
 .if ${MK_CRYPT} != "no" && exists(${SYSDIR}/crypto/rc4/rc4.c)
 _mppc=		mppc
+.endif
+
+.if ${MACHINE_CPUARCH} == "i386" || ${MACHINE_CPUARCH} == "amd64"
+_sppp=		sppp
 .endif
 
 .include <bsd.subdir.mk>
