--- a/share/man/man4/Makefile
+++ b/share/man/man4/Makefile
@@ -393,7 +393,7 @@ MAN=	aac.4 \
 	ng_socket.4 \
 	ng_source.4 \
 	ng_split.4 \
-	ng_sppp.4 \
+	${_ng_sppp.4} \
 	ng_sscfu.4 \
 	ng_sscop.4 \
 	ng_tag.4 \
@@ -857,6 +857,7 @@ _nda.4=		nda.4
 _ndis.4=	ndis.4
 _nfe.4=		nfe.4
 _nfsmb.4=	nfsmb.4
+_ng_sppp.4=	ng_sppp.4
 _if_ntb.4=	if_ntb.4
 _ntb.4=		ntb.4
 _ntb_hw_amd.4=	ntb_hw_amd.4
