--- a/share/man/man4/Makefile
+++ b/share/man/man4/Makefile
@@ -549,7 +549,7 @@ MAN=	aac.4 \
 	spigen.4 \
 	${_spkr.4} \
 	splash.4 \
-	sppp.4 \
+	${_sppp.4} \
 	ste.4 \
 	stf.4 \
 	stge.4 \
@@ -872,6 +872,7 @@ _qat.4=		qat.4
 _rr232x.4=	rr232x.4
 _speaker.4=	speaker.4
 _spkr.4=	spkr.4
+_sppp.4=	sppp.4
 _superio.4=	superio.4
 _tpm.4=		tpm.4
 _urtw.4=	urtw.4
