--- a/release/tools/ec2.conf
+++ b/release/tools/ec2.conf
@@ -27,7 +27,7 @@ ec2_common() {
 	chroot ${DESTDIR} ${EMULATOR} env ASSUME_ALWAYS_YES=yes \
 		/usr/sbin/pkg delete -f -y pkg
 	umount ${DESTDIR}/dev
-	rm ${DESTDIR}/var/db/pkg/repo-*.sqlite
+	rm -r ${DESTDIR}/var/db/pkg/repos/FreeBSD
 
 	# Turn off IPv6 Duplicate Address Detection; the EC2 networking
 	# configuration makes it unnecessary.
