--- a/release/tools/ec2.conf
+++ b/release/tools/ec2.conf
@@ -45,7 +45,7 @@ vm_extra_pre_umount() {
 	chroot ${DESTDIR} ${EMULATOR} env ASSUME_ALWAYS_YES=yes \
 		/usr/sbin/pkg delete -f -y pkg
 	umount ${DESTDIR}/dev
-	rm ${DESTDIR}/var/db/pkg/repo-*.sqlite
+	rm -r ${DESTDIR}/var/db/pkg/repos/FreeBSD
 
 	# The size of the EC2 root disk can be configured at instance launch
 	# time; expand our filesystem to fill the disk.
