csu tests: Remove extra slash
Remove an extra slash that ends up in the metalog.  This double slash
can produce an invalid specification file if there are subdirectories
down the hierarchy when sorted.

For example, consider the following metalog excerpt:

    ./base/aaa type=dir
    ./base//aaa/bbb type=dir

If sorted, would turn out:

    ./base//aaa/bbb type=dir
    ./base/aaa type=dir

Apparently missing the ./base/aaa directory in the specification.

Luckily here are no subdirectories.

Reviewed by:	imp, emaste
Approved by:	emaste (mentor)
MFC after:	1 week
Differential Revision:	https://reviews.freebsd.org/D48778

(cherry picked from commit 841856570e7b623c4f1283939936ffa005d2fcf4)

--- a/lib/csu/tests/dso/Makefile
+++ b/lib/csu/tests/dso/Makefile
@@ -19,6 +19,6 @@ SRCS+=	${src}.c
 SRCS+=	${src}.cc
 .endfor
 
-LIBDIR=		${TESTSBASE}/lib/csu/dynamiclib/
+LIBDIR=		${TESTSBASE}/lib/csu/dynamiclib
 
 .include <bsd.lib.mk>
